tests/baselines/reference/parserTypeQuery2.errors.txt
==== tests/cases/compiler/parserTypeQuery2.ts (1 errors) ====
    var v: typeof A;
                  ~
!!! parserTypeQuery2.ts(1,15): error TS2095: Cannot find name 'A'.